Fix center grid spacing

--- a/src/Styles/Preview/Center.css
+++ b/src/Styles/Preview/Center.css
@@ -13,14 +13,15 @@
     height: 40px;
     width: 40px;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 1px;
     cursor: pointer;
 }
 
 .center-grid-item {
     height: 100%;
     width: 100%;
-    border: 0.5px solid var(--label-gray);
+    border: 1px solid var(--label-gray);
+    box-sizing: content-box;
 }
 
 .center-grid-item:hover {
